fix date type in columns and resolve the exception in exceptionController when wrong end-points are used